--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -225,7 +225,8 @@
     "JAPANESE": "日本語",
     "DUTCH": "Nederlands",
     "BELARUSIAN": "Беларуская",
-    "POLISH": "Polski"
+    "POLISH": "Polski",
+    "VIETNAM": "Việt Nam"
   },
   "YES": "Yes",
   "NO": "No",
